@@ -2773,7 +2773,7 @@ WORKING-STORAGE  SECTION.
 PROCEDURE        DIVISION.
       * DISPLAY 'NOCOMMENT'           END-DISPLAY
       / DISPLAY 'NOCOMMENTSLASH'      END-DISPLAY
-      $ DISPLAY 'NOCOMMENTDOLLAR'     END-DISPLAY
+$       DISPLAY 'ACUCOMMENTDOLLAR'    END-DISPLAY
 *       DISPLAY 'NOMFCOMMENTASTERISK' END-DISPLAY
 /       DISPLAY 'NOMFCOMMENTSLASH'    END-DISPLAY
  |      DISPLAY 'ACUFLOATING'         END-DISPLAY
@@ -2798,8 +2798,8 @@ prog2.cob:17: error: invalid symbol '|' - skipping word
 ])
 
 # note: for checking the result we actually either need to run the program
-#       or change it to string concatenation and raise a constant compile time warning
-#       we do (historically) the first (for now)
+#       or change it to string concatenation and raise a constant compile
+#       time warning we do (historically) the first (for now)
 #
 AT_CHECK([$COMPILE -fmfcomment prog.cob], [0], [],
 [])
@@ -2840,29 +2840,34 @@ NOFLOATING
 
 
 AT_CHECK([$COMPILE_ONLY -free prog3.cob], [1], [],
-[prog3.cob:11: warning: spurious '$' detected - ignored
-prog3.cob:9: error: syntax error, unexpected *
+[prog3.cob:9: error: syntax error, unexpected *
 prog3.cob:10: error: syntax error, unexpected /
+prog3.cob:11: error: invalid symbol '$' - skipping word
 prog3.cob:12: error: syntax error, unexpected *
 prog3.cob:13: error: syntax error, unexpected /
 prog3.cob:14: error: invalid symbol '|' - skipping word
 prog3.cob:16: error: syntax error, unexpected Identifier
 ])
 AT_CHECK([$COMPILE_ONLY -free -fmfcomment prog3.cob], [1], [],
-[prog3.cob:11: warning: spurious '$' detected - ignored
-prog3.cob:9: error: syntax error, unexpected *
+[prog3.cob:9: error: syntax error, unexpected *
 prog3.cob:10: error: syntax error, unexpected /
+prog3.cob:11: error: invalid symbol '$' - skipping word
 prog3.cob:12: error: syntax error, unexpected *
 prog3.cob:13: error: syntax error, unexpected /
 prog3.cob:14: error: invalid symbol '|' - skipping word
 prog3.cob:16: error: syntax error, unexpected Identifier
 ])
 AT_CHECK([$COMPILE_ONLY -free -facucomment prog3.cob], [1], [],
-[prog3.cob:11: warning: spurious '$' detected - ignored
-prog3.cob:9: error: syntax error, unexpected *
+[prog3.cob:9: error: syntax error, unexpected *
 prog3.cob:10: error: syntax error, unexpected /
+prog3.cob:11: error: invalid symbol '$' - skipping word
 prog3.cob:12: error: syntax error, unexpected *
 prog3.cob:13: error: syntax error, unexpected /
+prog3.cob:16: error: syntax error, unexpected Identifier
+])
+AT_CHECK([$COMPILE_ONLY -fformat=terminal -facucomment prog3.cob], [1], [],
+[prog3.cob:9: error: syntax error, unexpected *
+prog3.cob:10: error: syntax error, unexpected /
 prog3.cob:16: error: syntax error, unexpected Identifier
 ])
 # Check that invalid indicator and doesn't abort preprocessing
@@ -2874,7 +2879,6 @@ prog3.cob:4: error: invalid indicator 'N' at column 7
 prog3.cob:5: error: invalid indicator 'U' at column 7
 prog3.cob:7: error: invalid indicator 'G' at column 7
 prog3.cob:8: error: invalid indicator 'U' at column 7
-prog3.cob:11: error: invalid indicator '$' at column 7
 prog3.cob:16: error: invalid indicator 'x' at column 7
 prog3.cob:6: error: PROGRAM-ID header missing
 prog3.cob:6: error: PROCEDURE DIVISION header missing
